# GadgetCoin

./: .gitignore  Cargo.toml  README.md
benches/: ethbench.rs
src/: ethtypes.rs  lib.rs  main.rs
src/eth/: aliases.rs  benchutils.rs  ethaccount.rs  ethblock.rs  ethblockchain.rs  ethstate.rs  ethtxn.rs  evmexec.rs  evmstate.rs  gas.rs  mod.rs  ops.rs  wei.rs
src/ethtypes/: ethaccount.rs  ethblock.rs  ethblockchain.rs  ethstate.rs  ethtxn.rs  evmstate.rs  gas.rs  mod.rs  type_aliases.rs
src/tests/: mod.rs
