[package]
name = "gadgetcoin"
version = "0.1.0"
authors = ["Krishna Chittur <kchittur@utexas.edu>", "Subrat Mainali <mainali.subrat@utexas.edu>"]

[dependencies]
ring = "0.13"
rand = "0.4"
libsecp256k1 = "0.2"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.8"

[dependencies.bincode]
version = "1.0.1"
features = ["i128"]

[lib]
doctest = false

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ethbench"
harness = false